tests/purs/failing/ContravariantInstance1.out
Error found:
in module [33mContravariantInstance1[0m
at tests/purs/failing/ContravariantInstance1.purs:9:1 - 9:35 (line 9, column 1 - line 9, column 35)

  One or more type variables are in positions that prevent [33mContravariant[0m from being derived.
  To derive this class, make sure that these variables are only used as the final arguments to type constructors, that their variance matches the variance of [33mContravariant[0m, and that those type constructors themselves have instances of [33mData.Functor.Functor[0m, [33mData.Bifunctor.Bifunctor[0m, [33mData.Functor.Contravariant.Contravariant[0m, or [33mData.Profunctor.Profunctor[0m.

  tests/purs/failing/ContravariantInstance1.purs:
  [90m    6[0m [33m[0m
  [90m    7[0m [33mnewtype Test a = Test (Predicate (Predicate [7ma[27m))[0m
  [90m    8[0m [33m[0m


See https://github.com/purescript/documentation/blob/master/errors/CannotDeriveInvalidConstructorArg.md for more information,
or to contribute content related to this error.

